# stockai

./: .env.example  .gitignore  CLAUDE.md  IEX.py  README.md  RI.py  backtest_registry.json  gaussianRL.py  polyio.py  positions.json  pyproject.toml  requirements.txt
futures/: __init__.py
futures/backtester/: __init__.py  engine.py  metrics.py  portfolio.py
futures/config/: __init__.py  settings.py  universes.py
futures/data/: __init__.py  earnings.py  earnings_surprise.py  fetcher.py  storage.py
futures/indicators/: __init__.py  base.py  momentum.py  moving_averages.py  volatility.py
futures/metalabeling/: __init__.py  features.py  labels.py  signals.py
futures/ml/: __init__.py  features.py  models.py  training.py
futures/models/: __init__.py  registry.py
futures/notebooks/: quickstart.ipynb
futures/regime/: __init__.py  classifier.py
futures/scripts/: __init__.py  backtest_metalabeling.py  backtest_pead.py  backtest_registry.py  collect_data.py  collect_earnings_data.py  daily_signals.py  diagnose_backtest.py  diagnose_strategy.py  (+4 more)
models/: active_model.json  metalabeling_model.pkl  metalabeling_small_20260130_v1.pkl  metalabeling_small_20260302_v1.pkl  metalabeling_small_20260302_v2.pkl  metalabeling_small_20260302_v3.pkl  metalabeling_small_20260302_v4.pkl  metalabeling_small_20260302_v5.pkl  metalabeling_small_20260302_v6.pkl  metalabeling_small_20260302_v7.pkl
paper_trading/: outcomes.csv  predictions.csv
paper_trading_pead/: positions.csv  trades.csv
tests/: conftest.py  test_backtester.py  test_features.py  test_labels.py  test_regime.py
(+77 files in other folders)
